<resources>
    <string name="app_name">Weather</string>
    <string name="Date">Date</string>
    <string name="City">City</string>
    <string name="Description">Description</string>
    <string name="Temp">20</string>
    <string name="TempDot">°</string>
    <string name="weather_image">Weather Image</string>
    <string name="searcj">Enter city name</string>
    <string name="mCloud">Cloud</string>
    <string name="mWind">Wind speed</string>
</resources>